--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,18 @@ org.gradle.jvmargs=-Xms256m -Xmx1024m --illegal-access=permit \
 kapt.use.worker.api=true
 # Compilation avoidance (see https://kotlinlang.org/docs/kapt.html#compile-avoidance-for-kapt-since-1-3-20)
 # I don't need to use the kotlin stdlib yet, so remove it to prevent extra bloat & method count issues
+
+
+mindustryVersion = v140.4
+jparcerVersion = 3.24.2
+jabelVersion = 0.7.0
+
+parserVersion = '3.22.1'
+
+aciVersion = 45ad8cd8ed9
+
+
+modCoreVersion = e76487956fb
+arcLibVersion = eef5d8de44
+
+kotlinVersion = 1.6.0
