--- a/resources/assets/bundles/bundle.properties
+++ b/resources/assets/bundles/bundle.properties
@@ -8,6 +8,7 @@ mod.ol.doNotShowItAgain = Don't remind again
 mod.ol.updater.tile = New version found!
 mod.ol.updater = New version of [#87ceeb]Omaloon[] found! \nMost likely, added new content or fixed some bugs. Recommend to install the newest version! \n\n[gray]The current version of Omaloon is v{0}, but latest is v{1}[]
 mod.ol.updater.load = Install Now!
+mod.ol.updater.changes = Changelist
 mod.ol.updater.later = Remind me later
 
 mod.ol.name = [#87ceeb]Omaloon[]
