dalanii-gaі-is-now-angeirum

--- a/resources/assets/bundles/bundle.properties
+++ b/resources/assets/bundles/bundle.properties
@@ -72,13 +72,17 @@ item.ol-omalite-alloy.details = Cold, slightly radioactive.
 
 ###Liquids
 
-liquid.ol-liquid-omalite.name = Omalite Liquid
-liquid.ol-liquid-omalite.description = Used to cool more powerful reactors and factories.
-liquid.ol-liquid-omalite.details = Icy liquid. Barely colder than cryofluid however it still can be used as coolant.
-
 liquid.ol-dalanii.name = Dalanii
 liquid.ol-dalanii.description = Used on item production.
 liquid.ol-dalanii.details = Suspiciously slimy.
+
+liquid.ol-angeirum.name = Angeirum
+liquid.ol-angeirum.description = It is used in some factories and to maintain pressure in the 2nd level.
+liquid.ol-angeirum.details = It falls as rain to the bottom of the craters, mixing with water and the remnants of "Set". It is extremely difficult to return angerum from this mixture.
+
+liquid.ol-liquid-omalite.name = Omalite Liquid
+liquid.ol-liquid-omalite.description = Used to cool more powerful reactors and factories.
+liquid.ol-liquid-omalite.details = Icy liquid. Barely colder than cryofluid however it still can be used as coolant.
 
 ###Blocks
 
