--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ kapt.use.worker.api=true
 # Compilation avoidance (see https://kotlinlang.org/docs/kapt.html#compile-avoidance-for-kapt-since-1-3-20)
 # I don't need to use the kotlin stdlib yet, so remove it to prevent extra bloat & method count issues
 
+java_version = 16
 
 mindustryVersion = v141.3
 jparcerVersion = 3.24.2
