Something-and-fixes-by-chatGTP

--- a/resources/assets/bundles/bundle.properties
+++ b/resources/assets/bundles/bundle.properties
@@ -93,11 +93,11 @@ block.ol-omalite-alloy-wall.description = Protects buildings from enemy projecti
 block.ol-omalite-alloy-wall-large.name = Large Omalite Alloy Wall
 block.ol-omalite-alloy-wall-large.description = Protects buildings from enemy projectiles. Freezes units that hit the wall with a laser weapon. Does not burn.
 
-block.ol-zarini-wall.name = Zarini modular wall
-block.ol-zarini-wall.description = Protects buildings from enemy projectiles. The walls are combined with each other.
+block.ol-modular-zarini-wall.name = Zarini modular wall
+block.ol-modular-zarini-wall.description = Protects buildings from enemy projectiles. The walls are combined with each other.
 
-block.ol-tungsten-wall.name = Tungsten modular wall
-block.ol-tungsten-wall.description = Protects buildings from enemy projectiles. The walls are combined with each other.
+block.ol-modular-tungsten-wall.name = Tungsten modular wall
+block.ol-modular-tungsten-wall.description = Protects buildings from enemy projectiles. The walls are combined with each other.
 
 block.ol-mechanical-compressor.name = Mechanical compressor
 block.ol-mechanical-compressor.description = Creates the pressure required for some factories and turrets.
