--- a/resources/assets/bundles/bundle.properties
+++ b/resources/assets/bundles/bundle.properties
@@ -11,6 +11,10 @@ mod.ol.updater.load = Install Now!
 mod.ol.updater.changes = Changelist
 mod.ol.updater.later = Remind me later
 
+mod.ol.crash-report-dialog.name = Oh no!
+mod.ol.crash-report-dialog.description = Looks like you found a [accent]bug[] in Omaloon. \nYou can report this bug to Omaloon developers, so they can fix it. \nHelp make Omaloon better!
+mod.ol.report = Report an error
+
 mod.ol.name = [#87ceeb]Omaloon[]
 
 mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[], TheEE145, Zelaux
@@ -32,13 +36,16 @@ ol.discord-join = Join to Omaloon Discord!
 ol.youtube = Omaloon YouTube
 
 setting.mod.ol.show.name = Hide the warning window
-setting.mod.ol.show.description = If enabled, removes warning window that appears after starting game.
+setting.mod.ol.show.description = If enabled, removes warning window \nthat appears after starting game.
 
 setting.mod.ol.check.name = Check for updates
-setting.mod.ol.check.description = If enabled, [#87ceeb]Omaloon[] will automatically check itself for updates when Mindustry starts \nand notify you if it finds an available update.
+setting.mod.ol.check.description = If enabled, [#87ceeb]Omaloon[] will automatically check itself \nfor updates when Mindustry starts and notify you if it finds \nan available update.
 
 setting.mod.ol.clarrows.name = Counters have not white arrows [red](need reload)[]
-setting.mod.ol.clarrows.description = If enabled, pressure arrows will have color that depends on it`s value
+setting.mod.ol.clarrows.description = If enabled, pressure arrows will have \ncolor that depends on it`s value
+
+setting.mod.ol.check-crashes.name = Look for crashes caused by Omaloon.
+setting.mod.ol.check-crashes.description = If enabled, the last game crash check will be performed. \nIf the crash is caused by Omaloon, you will be prompted \nto report it the next time you launch the game.
 
 ###Planets
 planet.ol-omaloon.name = Omaloon [red][hidden][]
