Create a new categories?

--- a/resources/assets/bundles/bundle.properties
+++ b/resources/assets/bundles/bundle.properties
@@ -36,16 +36,19 @@ ol.discord-join = Join to Omaloon Discord!
 ol.youtube = Omaloon YouTube
 
 setting.mod.ol.show.name = Hide the warning window
-setting.mod.ol.show.description = If enabled, removes warning window \nthat appears after starting game.
+setting.mod.ol.show.description = If enabled, removes warning window\nthat appears after starting game.
 
 setting.mod.ol.check.name = Check for updates
-setting.mod.ol.check.description = If enabled, [#87ceeb]Omaloon[] will automatically check itself \nfor updates when Mindustry starts and notify you if it finds \nan available update.
+setting.mod.ol.check.description = If enabled, [#87ceeb]Omaloon[] will automatically\ncheck itself for updates when Mindustry\nstarts and notify you if\nit finds an available update.
 
-setting.mod.ol.clarrows.name = Counters have not white arrows [red](need reload)[]
-setting.mod.ol.clarrows.description = If enabled, pressure arrows will have \ncolor that depends on it`s value
+setting.mod.ol.clarrows.name = Counters have not white arrows
+setting.mod.ol.clarrows.description = If enabled, pressure arrows will have\ncolor that depends on it`s value.\n[gray](need reload)[]
 
-setting.mod.ol.check-crashes.name = Look for crashes caused by Omaloon.
-setting.mod.ol.check-crashes.description = If enabled, the last game crash check will be performed. \nIf the crash is caused by Omaloon, you will be prompted \nto report it the next time you launch the game.
+setting.mod.ol.check-crashes.name = Look for crashes caused by Omaloon
+setting.mod.ol.check-crashes.description = If enabled, the last game crash check will\nbe performed. If the crash is caused\nby Omaloon, you will be prompted\nto report it the next time you launch\nthe game.
+
+setting.mod.ol.category.name = Create a new categories
+setting.mod.ol.category.description = If enabled creates a new category in the\nplacement window for pressure system\nblocks.\n[red]Warning! New categories may cause\nconflicts with other mods![]\n[gray](need reload)[]
 
 ###Planets
 planet.ol-omaloon.name = Omaloon [red][hidden][]
