--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ kapt.use.worker.api=true
 
 java_version = 16
 
+# TODO Zelaux please fix newer versions
 mindustryVersion = v142
 jparcerVersion = 3.24.2
 jabelVersion = 0.7.0
@@ -29,7 +30,7 @@ parserVersion = '3.22.1'
 aciVersion = 45ad8cd8ed9
 
 
-modCoreVersion = 889cfcb9aab
+modCoreVersion = 2a3f8a1aa92
 arcLibVersion = 2c2634c7ee
 
 kotlinVersion = 1.6.0
