--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,11 @@ repositories{
 
 ext{
     sdkRoot = System.getenv('ANDROID_HOME') ?: System.getenv('ANDROID_SDK_ROOT')
+    arcLibraryModule= {String name ->
+        //skip to last submodule
+        if(name.contains(':')) name = name.split(':').last()
+        return "com.github.Zelaux.ArcLibrary:$name:$arclibraryVersion"
+    }
 }
 
 //java 8 backwards compatibility flag
@@ -33,6 +38,7 @@ allprojects{
 dependencies{
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
     compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+    implementation arcLibraryModule(":graphics:draw3d")
 
     annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
 }
