--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,5 @@ org.gradle.jvmargs=--illegal-access=permit \
 
 #the build number that this mod is made for
 mindustryVersion = v145.1
+arclibraryVersion = 8e85224ae9
 jabelVersion = 0.9.0
