--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,21 @@
 import java.time.LocalDateTime
 import java.time.format.DateTimeFormatter
 
-apply plugin: "java"
+plugins{
+    id 'java'
+    id 'com.github.GlennFolker.EntityAnno' version "$entVersion"
+}
 
-version '1.0'
+version 'v0.1A'
 
-targetCompatibility = 8
-sourceCompatibility = JavaVersion.VERSION_16
+sourceCompatibility = 17
+tasks.withType(JavaCompile).configureEach{
+    sourceCompatibility = 17
+    options.release = 8
+
+    options.incremental = true
+    options.encoding = 'UTF-8'
+}
 
 sourceSets.main {
     java.srcDirs = ["main/src"]
@@ -20,7 +29,7 @@ repositories{
 }
 
 ext{
-    sdkRoot = System.getenv('ANDROID_HOME') ?: System.getenv('ANDROID_SDK_ROOT')
+    sdkRoot = System.getenv("ANDROID_SDK_ROOT") ?: System.getenv("ANDROID_HOME")
     arcLibraryModule= {String name ->
         //skip to last submodule
         if(name.contains(':')) name = name.split(':').last()
@@ -28,28 +37,23 @@ ext{
     }
 }
 
-//java 8 backwards compatibility flag
-allprojects{
-    tasks.withType(JavaCompile){
-        options.compilerArgs.addAll(['--release', '8'])
-    }
-}
-
 dependencies{
-    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
+    compileOnly "com.github.Anuken.Arc:arc-core:$arcVersion"
     compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+    compileOnly "com.github.GlennFolker.EntityAnno:entity:$entVersion"
+    kapt "com.github.GlennFolker.EntityAnno:entity:$entVersion"
     implementation arcLibraryModule(":graphics:draw3d")
 
-    annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
+    annotationProcessor "com.github.GlennFolker.EntityAnno:downgrader:$entVersion"
 }
 
-//force arc version
-configurations.all{
-    resolutionStrategy.eachDependency { details ->
-        if(details.requested.group == 'com.github.Anuken.Arc'){
-            details.useVersion "$mindustryVersion"
-        }
-    }
+entityAnno{
+    modName = 'omaloon'
+    mindustryVersion = project['mindustryVersion']
+    revisionDir = file("$rootDir/revisions/")
+    fetchPackage = 'omaloon.fetched'
+    genSrcPackage = 'omaloon.entities.comp'
+    genPackage = 'omaloon.gen.entities'
 }
 
 static def os(){ //Returns OS name
