--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,24 @@
-org.gradle.jvmargs=--illegal-access=permit \
---add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED \
---add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
---add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED
+org.gradle.jvmargs = \
+--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED \
+--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
+--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED
 
 #the build number that this mod is made for
-mindustryVersion = v145.1
+mindustryVersion = v146
+arcVersion = v146
+entVersion = 1.1.2
+
+kapt.include.compile.classpath = false
+kotlin.stdlib.default.dependency = false
+
 arclibraryVersion = 8e85224ae9
 jabelVersion = 0.9.0
