--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,12 @@
+pluginManagement{
+    repositories{
+        gradlePluginPortal()
+        maven{url 'https://www.jitpack.io'}
+    }
+}
+
+if(JavaVersion.current().ordinal() < JavaVersion.VERSION_17.ordinal()){
+    throw new GradleException("JDK 17 is a required minimum version. Yours: ${System.getProperty('java.version')}")
+}
+
 include "main:"
