--- a/gradle.properties
+++ b/gradle.properties
@@ -20,5 +20,5 @@ entVersion = 1.1.2
 kapt.include.compile.classpath = false
 kotlin.stdlib.default.dependency = false
 
-arclibraryVersion = 8e85224ae9
+arclibraryVersion = v1.0.2
 jabelVersion = 0.9.0
