--- a/gradle.properties
+++ b/gradle.properties
@@ -20,5 +20,5 @@ entVersion = 1.1.2
 kapt.include.compile.classpath = false
 kotlin.stdlib.default.dependency = false
 
-arclibraryVersion = v1.0.2
+arcLibraryVersion = v1.0.5
 jabelVersion = 0.9.0
