--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@ plugins{
     id 'com.github.Zelaux.MindustryModCore' version "$modCoreVersion"
 }
 mindustryModCore{
-    jarMindustryTask()
     addKaptAnnotations()
 //    setupSpriteGenerationTask()
 //    setupAnnotationProject(project(":annotations"))
@@ -73,6 +72,31 @@ dependencies{
     genSrcPackage = 'omaloon.entities.comp'
     genPackage = 'omaloon.gen.entities'
 }*/
+
+static def os(){ //Returns OS name
+    String s = System.getProperty("os.name")
+    return s == null ? "" : s
+}
+static def getdatadir(){ //Returns Mindustry data directory path
+    def ret = System.getenv("MINDUSTRY_DATA_DIR")
+    if(ret == null){
+        def os = os()
+        if(os.contains("Windows")){
+            return System.getenv("AppData") + "\\Mindustry\\"
+        }else if(os.contains("Linux") || os.contains("BSD")){
+            if(System.getenv("XDG_DATA_HOME") != null){
+                String dir = System.getenv("XDG_DATA_HOME")
+                if(!dir.endsWith("/")) dir += "/"
+                return dir + "Mindustry/"
+            }
+            return System.getProperty("user.home") + "/.local/share/Mindustry/"
+        }else if(os.contains("Mac")){
+            return System.getProperty("user.home") + "/Library/Application Support/Mindustry/"
+        }
+    }
+    return ret
+}
+
 task jarAndroid{
     dependsOn "jar"
     doLast{
@@ -107,6 +131,45 @@ task deploy(type: Jar){
             delete "$buildDir/libs/${project.archivesBaseName}Desktop.jar"
             delete "$buildDir/libs/${project.archivesBaseName}Android.jar"
         }
+    }
+}
+task jarMindustry(){
+    dependsOn "jar"
+    doFirst{}
+    ext{
+        acopy = { String intoPath ->
+            delete{
+                delete "${intoPath}/${project.archivesBaseName}Desktop.jar"
+            }
+            copy{
+                from "$buildDir/libs/${project.archivesBaseName}Desktop.jar"
+                into intoPath
+            }
+            println "Moved to ${intoPath}"
+        }
+    }
+    doLast{
+        def modsDirectories = []
+        def file = new File(rootDir, "modsDirectories.txt")
+        if(file.exists()){
+            BufferedReader reader = new BufferedReader(new FileReader(file))
+            reader.lines().forEach(line -> modsDirectories.add(line))
+            reader.close()
+        }else{
+            modsDirectories.add("classic")
+        }
+        for(String directory : modsDirectories){
+            if(directory.startsWith("#") || directory.startsWith("//")){
+                println "Directory \"$directory\" was skipped."
+                continue
+            }
+            if(directory.equals("classic")){
+                directory = getdatadir() + "mods"
+            }
+            acopy(directory)
+        }
+        def time = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy/MM/dd HH:mm:ss"))
+        println "Build ended at: ${time}"
     }
 }
 task runMindustry{
