--- a/build.gradle
+++ b/build.gradle
@@ -3,24 +3,8 @@ import java.time.format.DateTimeFormatter
 
 plugins{
     id 'java'
-    id 'com.github.Zelaux.MindustryModCore' version "$modCoreVersion"
 }
-mindustryModCore{
-    addKaptAnnotations()
-//    setupSpriteGenerationTask()
-//    setupAnnotationProject(project(":annotations"))
-    addArcLibrary()
-    addMindustryModCore()
-    projectInfo{
-        rootDirectory = rootDir
-        assetsPath = "assets"
-        assetsRawPath = "assets"
-        rootPackage = "omaloon"
-        modInfoPath = "mod.json"
-        revisionsPath = "revisions"
-        classPrefix = "OL"
-    }
-}
+
 version 'v0.1A'
 
 sourceCompatibility = 17
@@ -39,7 +23,6 @@ sourceSets.main {
 
 repositories{
     mavenCentral()
-    mavenLocal()
     maven{ url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }
     maven{ url  'https://raw.githubusercontent.com/Zelaux/Repo/master/repository' }
     maven{ url 'https://www.jitpack.io' }
@@ -49,29 +32,27 @@ ext{
     sdkRoot = System.getenv("ANDROID_SDK_ROOT") ?: System.getenv("ANDROID_HOME")
 }
 
+String arcLibraryModule(String name){
+    //module path to full module name
+    if(name.contains(':')) name = name.split(':').join("-")
+    return "com.github.Zelaux.ArcLibrary:$name:$arcLibraryVersion"
+}
+
+String arcModule(String name){
+    //skip to last submodule
+    if(name.contains(':')) name = name.split(':').last()
+    return "com.github.Anuken.Arc:$name:$arcVersion"
+}
+
 dependencies{
     compileOnly arcModule("arc-core")
     compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
-//    compileOnly "com.github.GlennFolker.EntityAnno:entity:$entVersion"
-//    kapt "com.github.GlennFolker.EntityAnno:entity:$entVersion"
+    compileOnly("org.jetbrains:annotations:24.0.1")
+
     implementation arcLibraryModule("graphics:draw3d")
     implementation arcLibraryModule("graphics:dashDraw")
     implementation arcLibraryModule("graphics:extendedDraw")
-    compileOnly("org.jetbrains:annotations:24.0.1")
-
-    compileOnly modCoreModule("annotations")
-    kapt modCoreModule("annotations")
-    annotationProcessor "com.github.GlennFolker.EntityAnno:downgrader:$entVersion"
 }
-
-/*entityAnno{
-    modName = 'omaloon'
-    mindustryVersion = project['mindustryVersion']
-    revisionDir = file("$rootDir/revisions/")
-    fetchPackage = 'omaloon.fetched'
-    genSrcPackage = 'omaloon.entities.comp'
-    genPackage = 'omaloon.gen.entities'
-}*/
 
 static def os(){ //Returns OS name
     String s = System.getProperty("os.name")
